bugs
5. intro personalised for you: Login/Sigup Button Missing  in Iphone browser - resolved
6. Communication Dashboard Tile the Word Communication is not visible completely - resolved
7. Please check the UI of wisdom survey bubble graph. - resolved

--- a/program/src/assets/css/responsive.css
+++ b/program/src/assets/css/responsive.css
@@ -716,7 +716,8 @@
 
     .attitle.txt31 
     {
-        font-size: 14px;
+        /* font-size: 14px; */
+        font-size: 13px;
     }
 
     .dbg_black 
